# SciDB19.3

./: CMakeBuildFlags.cmake  CMakeLists.txt  install.cmake  revision  run.py  scidb.spec.in
cmake/Modules/: CompareVersionsStrings.cmake  FindCAT.cmake  FindDocBook.cmake  FindFop.cmake  FindScaLAPACK.cmake  FindXsltProc.cmake  LinuxDistroVersion.cmake
debian/: control.trusty.in  rules.in
deployment/: deploy.sh
deployment/common/: chroot_build.sh  configure_postgresql.py  configure_postgresql.sh  deploy_common.sh  os_detect.sh  prepare_R.sh  prepare_chroot.sh  prepare_httpd_cdash.sh  prepare_testing.sh  prepare_toolchain.sh  register_cdash_repository.sh  register_repositories.sh  scidb_install.sh  scidb_install_repo.sh  scidb_remove_release.sh  user_access.sh
examples/bestmatch/: BestMatchArray.cpp  BestMatchArray.h  CMakeLists.txt  PhysicalBestMatch.cpp
examples/complex/: CMakeLists.txt  complex.cpp
examples/example_udos/: CMakeLists.txt
examples/fits/: CMakeLists.txt
examples/match/: CMakeLists.txt  MatchArray.cpp  MatchArray.h
examples/misc/: CMakeLists.txt  misc.cpp  misc_functions.h
examples/more_math/: CMakeLists.txt  more_math.cpp
examples/operators/: CMakeLists.txt
examples/point/: CMakeLists.txt  point.cpp
examples/ra_decl/: CMakeLists.txt  ra_decl.cpp
examples/rational/: CMakeLists.txt  rational.cpp  rational_functions.h
examples/savebmp/: CMakeLists.txt  PhysicalSaveBmp.cpp
examples/tile_integration/: CMakeLists.txt  TileApplyArray.cpp  TileApplyArray.h
include/: SciDBAPI.h
include/array/: AccumulatorArray.h  Address.h  AddressMeta.h  Array.h  ArrayDesc.h  ArrayDistribution.h  ArrayDistributionInterface.h  ArrayIterator.h  ArrayWriter.h  AttributeDesc.h  Attributes.h  BitmaskUnitTests.h  Chunk.h  ConstArrayIterator.h  ConstChunk.h  ConstChunkIterator.h  DBArray.h  DelegateArray.h  MemArray.h  MemChunk.h  MultiStreamArray.h  ParallelAccumulatorArray.h  ProjectArray.h  RLE.h  RLESegment.h  ReplicationMgr.h  RowCollection.hpp  SinglePassAdaptor.h  SinglePassArray.h  SortArray.h  StreamArray.h  SyntheticArray.h  TemplateParser.h  Tile.h  TileInterface.h  TileIteratorAdaptors.h  TupleArray.h
include/mpi/: MPILauncher.h  MPIManager.h  MPISlaveProxy.h
include/network/: ClientContext.h  Network.h  NetworkManager.h  NetworkMessageFactory.h  Scheduler.h  ThrottledScheduler.h
include/query/: Aggregate.h  Expression.h  FunctionDescription.h  InstanceID.h  LogicalOperator.h  OperatorDist.h  OperatorParam.h  PhysicalBoundaries.h  PhysicalOperator.h  PhysicalQueryPlanUtilities.h  PhysicalUpdate.h  Placeholder.inc  Query.h  QueryID.h  TypeSystem.h
include/rbac/: Session.h
include/storage/: BufferMgr.h  IndexMgr.h  StorageMgr.h
include/system/: Cluster.h  Config.h  ErrorCodes.h  Exceptions.h  LockDesc.h  LongErrors.inc  ShortErrors.inc  SystemCatalog.h  TxnIsolationConflict.h
include/util/: Arena.h  Barrier.h  Condition.h  Counter.h  DataStore.h  Event.h  FileIO.h  Job.h  LockManager.h  MallocStats.h  MessageTypes.inc  Mutex.h  Notification.h  PerfTime.h  Platform.h  PointerRange.h  Pqxx.h  RWLock.h  Semaphore.h  Singleton.h  ThreadPool.h  WorkQueue.h
install_ce/: build_scidb_ce.sh  install-scidb-ce.sh.in
install_ce/scripts/: start_postgres.sh
kdTree/: CMakeLists.txt  Makefile  kdTree.cpp  kdTree.h
kdTree_old/: kdTree.cpp  kdTree.h  test_kdtree.cpp
repos/deb/: repos_common.sh.in
repos/rpm/: repos_common.sh.in
src/: CMakeLists.txt
src/array/: AccumulatorArray.cpp  Array.cpp  ArrayDesc.cpp  ArrayDistribution.cpp  ArrayIterator.cpp  ArrayWriter.cpp  Attributes.cpp  CMakeCache.txt  CMakeLists.txt  CachedDBChunk.cpp  Chunk.cpp  ConstArrayIterator.cpp  ConstChunk.cpp  DBArray.cpp  DelegateArray.cpp  ListArrayBuilder.cpp  Makefile  MaterializedChunkCache.cpp  MemArray.cpp  MemChunk.cpp  MultiStreamArray.cpp  ParallelAccumulatorArray.cpp  RLE.cpp  ReplicationMgr.cpp  SinglePassAdaptor.cpp  SinglePassArray.cpp  SortArray.cpp  StreamArray.cpp  SyntheticArray.cpp  TransientCache.cpp  TupleArray.cpp  UnitTestChunkLimitPhysical.cpp  UnitTestDeepChunkMergePhysical.cpp  UnitTestMemArrayPhysical.cpp  UnitTestSortArrayPhysical.cpp  cmake_install.cmake
src/capi/: CMakeLists.txt  ClientAuthenticator.cpp  Credential.cpp  SciDBRemote.cpp  SciDBRemoteStubs.cpp
src/ccm/: CMakeLists.txt  CcmBridge.cpp  CcmConnection.cpp  CcmSessionCapsule.cpp  ClientCommManager.cpp  iquery.py
src/dense_linear_algebra/: CMakeLists.txt
src/jdbc/: CMakeLists.txt
src/linear_algebra/: CMakeLists.txt
src/monitor/: MonitorCommunicator.cpp
src/mpi/: CMakeLists.txt  MPILauncher.cpp  MPIManager.cpp  MPISlaveProxy.cpp
src/mpi/slaving/: CMakeLists.txt  mpi_slave_scidb.cpp
src/mpi/test/: MPITestPhysical.cpp
src/network/: AuthMessageHandleJob.cpp  ClientMessageHandleJob.cpp  ClientMessageHandleJob.h  Connection.cpp  MessageDesc.cpp  MessageHandleJob.cpp  MessageHandleJob.h  MessageUtils.cpp  Network.cpp  NetworkManager.cpp  OrderedBcast.cpp  entry.cpp
src/query/: Aggregate.cpp  AggregateUnitTests.h  AggregateUtils.cpp  AuxUnitTests.h  (+32 more)
udos/: CMakeLists.txt
udos/UnitTestMemArray/: CMakeCache.txt  CMakeLists.txt  Makefile  MemTrack.cpp  MemTrack.h  UnitTestMemArrayLogical.cpp  UnitTestMemArrayPhysical.cpp  ]  test.out  test.sh
udos/hdf5/: CMakeLists.txt  ExternalArray.cpp  ExternalArray.h  ExternalArrayIterator.h  HDF5Array.cpp  HDF5Array.h  LogicalScanExternalArray.h  LogicalScanHDF5.cpp  LogicalScanTileDB.cpp  PhysicalScanExternalArray.cpp  PhysicalScanExternalArray.h  PhysicalScanHDF5.cpp  PhysicalScanTileDB.cpp  TileDBArrayDesc.cpp  TileDBArrayDesc.h  TileDBBridgeArray.cpp  TileDBBridgeArray.h
utils/: CMakeLists.txt  benchGen.cc  centos-6-x86_64.cfg  centos-7-x86_64.cfg  check_or_replace_copyright.pl  chroot_build.py  log1.properties  make_packages.sh  pg_seq_reset.py  rbactool.py  scidb_backup.py  scidbctl.py
utils/indexmapper/: CMakeLists.txt
utils/iquery/: CMakeLists.txt  IqueryConfig.h  iquery.cpp  iquery_parser.cpp
utils/scidblib/: CMakeLists.txt  pgpass_updater.py  scidbctl_common.py  ssh_runner.py  util.py
utils/shim/: CMakeLists.txt
(+398 files in other folders)
